# dicom-mcp

./: README.md  pyproject.toml
src/dicom_mcp/: __main__.py  dicom_client.py  server.py
